syntax = "proto3";

option go_package = "./;decryptionplugin";

package types;

message CiphertextWithID {
	bytes ciphertextID = 1;
	bytes ciphertext = 2;
}
message Query {
	repeated CiphertextWithID decryptionRequests = 1;
}

message DecryptionShareWithID {
	bytes ciphertextID = 1;
	bytes decryptionShare = 2;
}

message Observation {
	repeated DecryptionShareWithID decryptionShares = 1;
}

message ProcessedDecryptionRequest {
	bytes ciphertextID = 1;
	bytes plaintext = 2;
}

message Report {
	repeated ProcessedDecryptionRequest processedDecryptedRequests = 1;
}